		separate hiearchies. Existing Harmoni databases will need to have these
		columns added and the data updated.
		(2007-09-13 - Adam Franco)
		
		
	**** IMPORTANT *** Change: 
		Scheduling: Two sc_item columns "start" and "end" conflict with reserved
		words in PostgreSQL. Existing Harmoni databases will need to have these
		columns added and the data updated.
		(2007-09-13 - Adam Franco)
		
		
	* Bug Fix: 
		ErrorHandler: Fixed reliance on methods in the HarmoniException class when
		printing. 
		(2007-09-13 - Adam Franco)
		
	* Bug Fix: 
		Fixed numerous MySQL-specific SQL statements that didn't work with
		PostgreSQL. 
		(2007-09-13 - Adam Franco)
		
	* Bug Fix: 
		Added auto-increment-column designators to appropriate Insert Queries so
		that the sequence-values could be accessed when using PostgreSQL.
		(2007-09-13 - Adam Franco)
		
	* New feature: 
		
		DBHandler: Can now run an entire directory tree full of sql files.
		(2007-09-11 - Adam Franco)
		
	* Bug Fix: 
		
		DBHandler: Some fixes to the PostgreSQL implementation and tests.
		(2007-09-11 - Adam Franco)
		
	* New feature: 
		DBHandler: New database updater utility. The only function implemented
		currently is to convert column names to lowercase.
		(2007-09-11 - Adam Franco)
		
	* Bug Fix: 
		
		ErrorHandler: Fixed HTML syntax error in Exception printing.
		(2007-09-11 - Adam Franco)
		
	* Bug Fix: 
		
		Repository: Now properly escapes values in modification date-storing query.
		(2007-09-07 - Adam Franco)
	
v. 0.11.0 (2007-09-07)
----------------------------------------------------
		
	**** IMPORTANT *** Change: 
		As of this version, Harmoni no longer supports PHP4. Please use PHP5 or
		later. 
		(Adam Franco)
		
	* Change: 
		GUI: Y-Layout now uses div tags instead of tables to allow the setting of
		child widths.
		(Adam Franco)
		
	* Change: 
		Removing ampersands for compatability with other PHP5 code. The BBEdit-grep
		string used for the find and replace was: (function