@@ -49,6 +49,10 @@
 			updated.
 		 (<em>2007-09-13 - Adam Franco</em>)</li>
 		
+		<li> Change:  
+			DBHandler: The PostGre classes have all been renamed to PostgreSQL
+		 (<em>2007-09-14 - Adam Franco</em>)</li>
+		
 		<li> Bug Fix:  
 			ErrorHandler: Fixed reliance on methods in the HarmoniException class
 			when printing.
